deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brand
spec:
  replicas: 2
  selector:
    matchLabels:
      app: brand
  template:
    metadata:
      labels:
        app: brand
    spec:
      imagePullSecrets:
      - name: secrets
      containers:
      - name: website
        image: akhiakhi1/brand:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 80

---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-service
spec:
  selector:
    app: brand
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
